Issue #17209: curses.window.get_wch() now handles correctly KeyboardInterrupt (CTRL+c)